tdf#112633 oox: Save backup images to proper path in document

Artistic effects on bitmap images in OOXML files create a backup file
with the original image. These were not being saved into the proper
path for PPTX files because the `/word` directory was hardcoded in the
export code.

Change-Id: I3e880ce763dc10dbc86ccf0e00871be5d36f6d88